--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Offshore365</title>
-    <link rel="icon" href="/logo.png" />
+    <title>Offshore 365</title>
+    <link rel="icon" href="/logo2.png" />
   </head>
   <body>
     <div id="root"></div>
